# dagma

./: .readthedocs.yaml  README.md  dagma_linear.py  dagma_nonlinear.py  job_runner.py  method_runner.py  pyproject.toml  requirements.txt  utils.py
docs/: api.rst  conf.py  dagma.linear.rst  dagma.nonlinear.rst  dagma.utils.rst  index.rst  requirements.txt  usage.rst
docs/_autoapi_templates/python/: class.rst  function.rst  method.rst  module.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/api/: dagma.linear.rst  dagma.nonlinear.rst  dagma.utils.rst  index.rst
docs/api/dagma/: index.rst
docs/api/dagma/linear/: index.rst  test.rst
docs/api/dagma/linear/DagmaLinear/: _adam_update.rst  _func.rst  _h.rst  _score.rst  fit.rst  index.rst  minimize.rst
docs/api/dagma/locally_connected/: index.rst
docs/api/dagma/locally_connected/LocallyConnected/: __delattr__.rst  __dir__.rst  __getattr__.rst  __repr__.rst  __setattr__.rst  __setstate__.rst  _apply.rst  _call_impl.rst  _get_backward_hooks.rst  _get_backward_pre_hooks.rst  _get_name.rst  _load_from_state_dict.rst  _maybe_warn_non_full_backward_hook.rst  _named_members.rst  _register_load_state_dict_pre_hook.rst  _register_state_dict_hook.rst  _replicate_for_data_parallel.rst  _save_to_state_dict.rst  _slow_forward.rst  add_module.rst  apply.rst  bfloat16.rst  buffers.rst  children.rst  cpu.rst  cuda.rst  double.rst  eval.rst  extra_repr.rst  float.rst  forward.rst  get_buffer.rst  get_extra_state.rst  get_parameter.rst  get_submodule.rst  half.rst  index.rst  ipu.rst  load_state_dict.rst  modules.rst  (+26 more)
docs/api/dagma/nonlinear/: index.rst  test.rst
docs/api/dagma/nonlinear/DagmaMLP/: __delattr__.rst  __dir__.rst  __getattr__.rst  __repr__.rst  __setattr__.rst  __setstate__.rst  _apply.rst  _call_impl.rst  _get_backward_hooks.rst  _get_backward_pre_hooks.rst  _get_name.rst  _load_from_state_dict.rst  _maybe_warn_non_full_backward_hook.rst  _named_members.rst  _register_load_state_dict_pre_hook.rst  _register_state_dict_hook.rst  _replicate_for_data_parallel.rst  _save_to_state_dict.rst  _slow_forward.rst  add_module.rst  apply.rst  bfloat16.rst  buffers.rst  children.rst  cpu.rst  cuda.rst  double.rst  eval.rst  extra_repr.rst  fc1_l1_reg.rst  fc1_to_adj.rst  float.rst  forward.rst  get_buffer.rst  get_extra_state.rst  get_parameter.rst  get_submodule.rst  h_func.rst  half.rst  index.rst  (+28 more)
docs/api/dagma/nonlinear/DagmaNonlinear/: fit.rst  index.rst  log_mse_loss.rst  minimize.rst
docs/api/dagma/utils/: count_accuracy.rst  index.rst  is_dag.rst  set_random_seed.rst  simulate_dag.rst  simulate_linear_sem.rst  simulate_nonlinear_sem.rst  simulate_parameter.rst
examples/: dagma_test.ipynb
src/dagma/: linear.py  locally_connected.py  nonlinear.py  utils.py
