[build-system]
requires = ['setuptools>=65']
build-backend = 'setuptools.build_meta'

[project]
name = 'dagma'
requires-python = ">=3.7"
dynamic = ['version']
authors = [
    {name = "Kevin Bello", email = "kbello@cs.cmu.edu"},
]
description = 'Implementation of the DAGMA algorithm'
readme = "README.md"
license = {text = "Apache 2.0"}
keywords = ['dagma', 'notears', 'causal discovery', 'bayesian network', 'structure learning']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Intended Audience :: Science/Research',
    'Development Status :: 3 - Alpha',
]
dependencies = [
    'numpy', 
    'scipy', 
    "torch", 
    'tqdm', 
    'igraph'
]

[tool.setuptools.dynamic]
version = {file = "src/VERSION"}

[project.urls]
'Repository' = 'https://github.com/kevinsbello/dagma'
'Documentation' = "https://dagma.readthedocs.io/en/latest/"
'Issues' = 'https://github.com/kevinsbello/dagma/issues'

[metadata]
long_description = 'file: README.md, LICENSE'
long_description_content_type = 'text/markdown'
url = 'https://github.com/kevinsbello/dagma'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
exclude = [".tests*", ".examples*"]  # exclude packages matching these glob patterns (empty by default)

